# IoT_ConnectingThings

Assignment1/: client.js  index.html  index.js
Assignment2/: index.html  index.js  message.json
Assignment3/: CMakeLists.txt  framebuf.cpp  framebuf.h  main.cpp  mono_vlsb.cpp  mono_vlsb.h  ssd1306.cpp  ssd1306.h
Assignment4/Client/: CMakeLists.txt  LED.h  main.cpp
Assignment4/Cpp_Client/: CMakeLists.txt  LED.h  main.cpp
Assignment4/JS_Client/: index.js  message.json
Assignment4/Server/: index.js  message.html  message.json  package-lock.json  package.json
Assignment5/Cpp_Client/: CMakeLists.txt  main.cpp  temp_drawing.h
Assignment5/JS_Client/: index.html  index.js  message.html  message.json
